--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kkata/front-memo.git"
+  },
   "author": "",
   "license": "ISC"
 }
